--- a/global.css
+++ b/global.css
@@ -43,7 +43,8 @@
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
+    /* --accent: 0 0% 14.9%; */
+    --accent: #ab8bff;
     --accent-foreground: 0 0% 98%;
     --destructive: 0 70.9% 59.4%;
     --border: 0 0% 14.9%;
